--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -8,6 +8,7 @@ ARG IMAGETYPE="application"
 ARG BASEIMAGE="huggla/backup-alpine:base-$TAG"
 ARG RUNDEPS="libpq libldap"
 ARG BUILDDEPS="postgresql-client"
+ARG MAKEDIRS="/usr/bin /usr/lib"
 ARG BUILDCMDS=\
 "   cp -a /usr/bin/pg_dump* /imagefs/usr/bin/ "\
 "&& cp -a /usr/lib/libsasl2* /imagefs/usr/lib/"
